implemento di optional per gestione di possibili nullpointer exception